[tool.poetry]
name = "4-asyncio"
version = "0.1.0"
description = ""
authors = ["Jorique <guselnikovgeorgiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.37"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
requests = "^2.32.3"
pandas = "^2.2.3"
xlrd = "^2.0.1"
aiohttp = "^3.11.11"
fake-useragent = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
